--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   location: ^1.4.1
+  sensors:
 
 
 # For information on the generic Dart part of this file, see the
